labs/lab7/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juice-shop
  namespace: juice-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: juice-shop
  template:
    metadata:
      labels:
        app: juice-shop
    spec:
      serviceAccountName: juice-shop
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: juice-shop
          image: bkimminich/juice-shop@sha256:fd58bdc9745416afce8184ee0666278a436574633ea7880365153a63bfd418b0
          ports:
            - name: http
              containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
              ephemeral-storage: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi
              ephemeral-storage: 1Gi
          startupProbe:
            httpGet:
              path: /rest/admin/application-version
              port: http
            periodSeconds: 5
            failureThreshold: 36
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /rest/admin/application-version
              port: http
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: writable-paths
              mountPath: /juice-shop/data
              subPath: data
            - name: writable-paths
              mountPath: /juice-shop/ftp
              subPath: ftp
            - name: writable-paths
              mountPath: /juice-shop/logs
              subPath: logs
            - name: writable-paths
              mountPath: /juice-shop/i18n
              subPath: i18n
            - name: writable-paths
              mountPath: /juice-shop/frontend/dist/frontend
              subPath: frontend
            - name: writable-paths
              mountPath: /juice-shop/.well-known
              subPath: wellknown
            - name: writable-paths
              mountPath: /tmp
              subPath: tmp
      volumes:
        - name: writable-paths
          emptyDir:
            sizeLimit: 512Mi
